# TandemG

./: .gitignore  README.md
Gateway/: CMakeLists.txt  nrf52840dk_nrf52840.overlay  prj.conf
Gateway/src/: at-commands-libary.h  at-commands.c  at-commands.h  httpStringBuilder.c  httpStringBuilder.h  main.c  modem-drv.c  modem-drv.h  network-api.c
Gateway/src/dev-if/: dev-if.c
Gateway/src/osal/: osal.c  osal_impl.h
sdk/: README.md
sdk/Interface/: dev-if.h  network-api.h  osal.h  sdk_common.h
sdk/sdkInc/: logger.h  upLink.h  williotSdkJson.h
sdk/sdkSrc/: logger.c  upLink.c  williotSdkJson.c
